--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
     "@types/sequelize": "^4.28.11",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "fs": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.1",
     "typescript": "^4.5.5"
@@ -19,7 +21,6 @@
   "name": "handicare",
   "version": "1.0.0",
   "main": "app.ts",
-  "devDependencies": {},
   "author": "",
   "license": "ISC",
   "description": ""
