--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
+    "@types/node": "^17.0.21",
     "@types/sequelize": "^4.28.11",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.0",
