--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
     "@types/sequelize": "^4.28.11",
+    "body-parser": "^1.19.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
