--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "mysql2": "^2.3.3",
+    "semver": "^7.3.7",
     "sequelize": "^6.19.0",
+    "sequelize-cli": "^6.4.1",
+    "sequelize-pool": "^7.1.0",
     "typescript": "^4.5.5"
   },
   "name": "handicare",
