--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "http-status-codes": "^2.2.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
     "typescript": "^4.5.5"
