--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "http-status-codes": "^2.2.0",
+    "https": "^1.0.0",
     "mysql2": "^2.3.3",
     "semver": "^7.3.7",
     "sequelize": "^6.19.0",
